# tree-sitter-bosque

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-bsq.bsq  example.bsq  go.mod  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  tree-sitter.json
bindings/c/: tree-sitter-bosque.pc.in
bindings/c/tree_sitter/: tree-sitter-bosque.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBosqueTests/: TreeSitterBosqueTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: Access_Expressions.txt  Binary_Expressions.txt  Bosque_Core.txt  Comments.txt  Compare_Operations.txt  Constructor_Expressions.txt  Debug.txt  Elists.txt  Entities.txt  Enums.txt  Function_Calls.txt  Functions.txt  If_Expressions.txt  If_Statements.txt  Lambdas.txt  Literals.txt  Logical_Expressions.txt  Match.txt  Method_Calls.txt  Multi_Assign.txt  Namespaces.txt  Nbody.txt  Object_Oriented_Tree.txt  PreProcessor.txt  Ref_Updates.txt  Return_Statements.txt  Special_Constant_Expressions.txt  Strings.txt  Type.txt  Unary_Expressions.txt  Var_Decl_Assign.txt  Void_Statements.txt  namespaces.txt
