[package]
name = "tree-sitter-bosque"
description = "n/a"
version = "0.1.5"
authors = ["Kennett Puerto <kennettdev1@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bosque"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/karidus-423/tree-sitter-bosque"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
